# ai-engineer-training

./: .gitignore
week03-homework-2/: pyproject.toml
week03-homework-2/graph_rag/: main.py  notebook.md
week03-homework-2/milvus_faq/: main.py  notebook.md  notebook2.md
