[project]
name = "week03-homework-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "llama-index>=0.14.0",
    "llama-index-embeddings-dashscope>=0.4.1",
    "llama-index-llms-dashscope>=0.5.1",
    "llama-index-llms-openai-like>=0.5.1",
    "llama-index-vector-stores-milvus>=0.9.2",
    "neo4j>=5.28.2",
    "pymilvus>=2.6.1",
]
